2015-07-20 <jthaler>
   Renamed WinnerTakeAllRecombiner.hh/cc to ExtraRecombiners.hh/cc
   Added _too_few_axes_warning to HardestJetAxes
   Added GenKT_Axes and OnePass_GenKT_Axes and Comb_GenKT_Axes (using E-scheme recombination).
   Added warning about p < 0 or delta <=0 in GenKT axes finders.
   Added warning about beta <= 0 in all measures.
2015-07-10 <jthaler>
   Putting in small tweaks in documentation to get ready for 2.2 release candidate 1.
2015-06-15 <jthaler>
   Starting doxygen file for eventual improved documentation.
   Starting long process of improving documentation throughout.
   Made the basic usage file a bit easier to read.
   Adding in LimitedWarnings for old style constructors
2015-06-12 <jthaler>
   Synchronized definition of new measures with XCone paper.
   In MeasureDefinition, added default values of jet_distance_squared and beam_distance_squared for cases where we don't want to optimize specifically.
   Fixed bug in OriginalGeometricMeasure and ModifiedGeometric Measure
   Commented out DeprecatedGeometricMeasure and DeprecatedGeometricCutoffMeasure since they were only causing confusion
2015-05-26 <TJW>
   Removed axis_scale_factor(), added bool to calculate this value if needed to save computation time
   Defined small offset in denominator of axis scaling according to accuracy of refinement
   Updated advanced examples to include tau values and number of jet constituents
2015-05-25 <jthaler>
   Clean up of AxesDefinition
   Splitting get_axes into get_starting_axes and get_refined axes
   Putting in proper noise ranges (hopefully) for MultiPass
   Clean up of MeasureDefinition, rename jet_gamma to beam_gamma
   Put in zero checking for jet_distance in ConicalGeometricMeasure
   Added in ConicalMeasure for consistency
   Changing OnePass Minimization to allow for temporary uphill
2015-05-24 <TJW>
   Added Combinatorial GenET_GenKT_Axes and MultiPass_Manual_Axes