@@ -1,70 +1,0 @@
-0.1242063452 -0.1002053630 9.4986070894 9.4999476298
-0.0000037529 0.0000048977 -0.0000607608 0.0000610733
--0.0000000000 -0.0000000000 0.0000020866 0.0000020866
--0.0000000000 -0.0000000000 -0.0000000905 0.0000000905
--0.8742026933 1.3453786667 -1.8087495976 2.4218441315
-0.4643879291 -0.6198799444 -1.0660543095 1.3250882498
--0.4043618795 -0.3298344757 0.3985268254 0.6703301738
-0.2059456422 -1.2213699972 0.5685824653 1.3695487935
-0.1623420371 0.2250505958 0.4074527625 0.5123477786
--0.2668731870 -0.6053577407 2.1783172463 2.2805624127
-0.0788077509 0.1210347335 0.4529010029 0.4954383632
-0.0149016587 -0.3985161494 -0.4386846425 0.6090658267
-1.0922975836 0.2218902204 -2.0087844540 2.3015308055
--0.1300255646 0.1043107763 -0.3060157337 0.3484724017
--0.5012450683 0.1128377237 -0.7204897515 0.8958594964
--0.8208443566 1.2287512354 -3.2875977896 3.6069563184
--0.3773022267 -0.3703772125 -0.2122479172 0.5865707230
-0.3199547088 -0.3105644101 0.2014522152 0.5088064941
-0.1947256445 -0.1916712321 -0.1755922776 0.3535086572
-0.3473568887 -0.7163606252 -0.1981826858 0.8314597590
-0.0367065738 -0.6840218499 -0.0627649514 0.7018920769
-0.1412911400 -0.1206029122 -0.0355328862 0.2350545034
--0.0923141381 -0.2895012866 0.2456626018 0.4134036882
--0.1323051208 -0.3852976164 0.2488647040 0.4973653828
-0.4062662815 -0.6589287567 1.0840033003 1.4205433865
-0.1070865248 -0.1534101251 0.0001625233 0.2334137990
--0.2168817781 -0.4272953251 0.7478526240 0.8991008468
-0.0549754367 -0.0419545617 1.9385318304 1.9444556415
-0.2158971711 -2.8473687472 8.6162389251 9.1255950694
--0.1178370054 -0.1436901368 1.1829878264 1.2056004303
-0.2807019561 -0.3101701380 0.4021620642 0.5968360022
--0.1384527389 0.2418445243 0.0372740162 0.3118763978
--0.2976785577 -1.5508260484 4.4633950671 4.8265847216
-0.0877598669 -0.1051666367 0.7891664811 0.8130346460
-0.1481759290 -0.1904102505 0.6044504266 0.6656217188
--0.6822541147 -0.3903279774 3.6004972904 3.6879380594
-0.6633145329 -0.3071083031 0.5588367568 1.0460763017
-0.2281932239 1.1838267715 1.0465352304 1.6710460558
-0.1852390155 0.0251505558 0.0866264130 0.2488573158
-0.6344932147 0.0594826110 -0.3037729523 0.7196371391
--0.1342481155 0.0133465258 0.1607671636 0.2495322976
--0.1057314913 0.4155774745 -0.4835095581 0.6611694664
-0.0497180264 0.3369978852 0.2706021562 0.4555047576
-0.0735091906 0.0334283431 -0.1503948251 0.1707034231
--1.6974821899 1.9016843684 -3.8655394972 4.6324642051
--0.1692567659 0.8513885232 -0.9402281537 1.2867629353
--0.5045675091 -0.4363623176 0.3874277131 0.9180283793
-0.1888159230 0.1343329703 -0.0309511519 0.2699525401
-0.3154758573 -0.2868474805 -0.2072401822 0.4929245248
--0.7015760336 0.8466894132 -1.2553053263 1.6746232831
--0.5001798070 0.2489248578 -0.6777532326 0.8886576781
--0.8568044668 0.5627402071 -1.4196185813 1.7565839394
--1.6757616934 1.4984196859 -3.8952372709 4.4995324190
--2.5594230621 1.8487285082 -5.6748605508 6.4954372739
--0.0621933695 -0.0699965368 0.0141889125 0.1648892235
-0.4750273300 -0.3869565013 0.0813764839 0.6326357805
-0.0167562656 0.3288875755 -0.5449954120 0.8081727772
--0.0009589048 -0.0417282729 -0.0665294801 0.1561663869
-1.7077900688 0.7290397378 -2.1589101028 2.8510381399
-0.1685464225 0.3134004861 -0.5242263675 0.6335937544
-0.8765257007 0.1111844532 -0.8359969358 1.2163676102
--0.1291371125 -0.0616675264 -0.1815062327 0.2676628299
--0.0714580232 0.4210123103 -0.4981657304 0.6698852960
--0.0498851041 -0.0882299269 -0.1370453288 0.2174260016
-0.4431067290 -0.6372627753 -0.9996911034 1.2728115810
-0.3867187492 -0.5202218404 -1.1797634604 1.3533306180
-1.3153967045 -0.1894313864 -1.3539413560 1.9019804248
-0.8733564110 0.4138422104 -0.8568879834 1.2991357114
-0.2085376093 0.0770143994 -0.5433806654 0.6034579394
-0.9769302819 0.2327191387 -1.1672429149 1.6182343540
